k8s/adminService_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminservice
  template:
    metadata:
      labels:
        app: adminservice
    spec:
      containers:
        - name: adminservice
          image: dockerprogrammer/streaming-app:adminservice
          ports:
            - containerPort: 3003
