k8s/streamingService_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamingservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamingservice
  template:
    metadata:
      labels:
        app: streamingservice
    spec:
      containers:
        - name: streamingservice
          image: dockerprogrammer/streaming-app:streamingservice
          ports:
            - containerPort: 3002
